--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,12 @@
             "dest": "/api/index.php"
         }
     ],
+    "builds": [
+        {
+            "src": "artisan",
+            "use": "@vercel/php"
+        }
+    ],
     "public": true,
     "outputDirectory": "public",
     "env": {
