--- a/vercel.json
+++ b/vercel.json
@@ -29,9 +29,9 @@
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
         "DB_CONNECTION": "mysql",
-        "DB_HOST": "sql12.freesqldatabase.com",
+        "DB_HOST": "sql.freedb.tech",
         "DB_PORT": "3306",
-        "DB_DATABASE": "sql12754675",
-        "DB_USERNAME": "sql12754675"
+        "DB_DATABASE": "freedb_izzark",
+        "DB_USERNAME": "freedb_izzark"
     }
 }
