--- a/vercel.json
+++ b/vercel.json
@@ -31,7 +31,7 @@
         "DB_CONNECTION": "mysql",
         "DB_HOST": "sql.freedb.tech",
         "DB_PORT": "3306",
-        "DB_DATABASE": "freedb_izzark",
+        "DB_DATABASE": "freedb_blog_guru",
         "DB_USERNAME": "freedb_izzark"
     }
 }
